--- a/apps/audition-harness/package.json
+++ b/apps/audition-harness/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "@types/bun": "^1.3.5",
+    "@types/node": "^25.0.3",
     "tsdown": "^0.18.3",
     "typescript": "^5.9.3"
   }
