--- a/apps/audition-harness/tsconfig.json
+++ b/apps/audition-harness/tsconfig.json
@@ -4,7 +4,7 @@
     "outDir": "./dist",
     "rootDir": "./src",
     "lib": ["ES2022", "DOM"],
-    "types": ["bun-types"]
+    "types": ["bun-types", "node"]
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
