--- a/packages/inventory/package.json
+++ b/packages/inventory/package.json
@@ -17,6 +17,7 @@
     "test": "bun test"
   },
   "devDependencies": {
+    "@types/bun": "^1.3.5",
     "tsdown": "^0.18.3",
     "typescript": "^5.9.3"
   }
