--- a/apps/audition-harness/package.json
+++ b/apps/audition-harness/package.json
@@ -12,7 +12,8 @@
     "test": "bun test"
   },
   "dependencies": {
-    "@msf/core": "workspace:*"
+    "@msf/core": "workspace:*",
+    "@msf/runtime": "workspace:*"
   },
   "devDependencies": {
     "@types/bun": "^1.3.5",
