--- a/packages/msf-runtime/package.json
+++ b/packages/msf-runtime/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@msf/compiler",
+  "name": "@msf/runtime",
   "version": "0.1.0",
   "type": "module",
   "author": "Katherine Martinez",
@@ -30,7 +30,9 @@
     "@msf/core": "workspace:*"
   },
   "devDependencies": {
+    "@types/bun": "^1.3.5",
     "tsdown": "^0.18.3",
     "typescript": "^5.9.3"
   }
 }
+
