--- a/packages/msf-runtime/tsconfig.json
+++ b/packages/msf-runtime/tsconfig.json
@@ -3,8 +3,7 @@
   "compilerOptions": {
     "outDir": "./dist",
     "rootDir": "./src",
-    "lib": ["ES2022", "DOM"],
-    "types": []
+    "lib": ["ES2022", "ESNext", "DOM"]
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
